RESOLVED FIXED260264
[IFC] TextOnlyLineBuilder should handle content with 'overflow-wrap: break-word'
https://bugs.webkit.org/show_bug.cgi?id=260264
Summary [IFC] TextOnlyLineBuilder should handle content with 'overflow-wrap: break-word'
alan
Reported 2023-08-16 09:15:00 PDT
ssia
Attachments
Patch (1.52 KB, patch)
2023-08-16 09:17 PDT, alan
no flags
Patch (1.52 KB, patch)
2023-08-16 15:12 PDT, alan
no flags
Patch (4.14 KB, text/plain)
2023-08-16 19:28 PDT, alan
no flags
alan
Comment 1 2023-08-16 09:17:33 PDT
Radar WebKit Bug Importer
Comment 2 2023-08-16 13:14:21 PDT
alan
Comment 3 2023-08-16 15:12:06 PDT
alan
Comment 4 2023-08-16 19:28:59 PDT
EWS
Comment 5 2023-08-16 22:48:32 PDT
Committed 266989@main (4711537e2043): <https://commits.webkit.org/266989@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467299 [details].
Note You need to log in before you can comment on or make changes to this bug.