[IFC] TextOnlyLineBuilder should handle content with 'overflow-wrap: break-word' https://bugs.webkit.org/show_bug.cgi?id=260264

Reviewed by Antti Koivisto.

TextOnlyLineBuilder is already capable of handling content with arbitrary breaking positions.

* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.cpp:
(WebCore::Layout::TextOnlySimpleLineBuilder::isEligibleForSimplifiedTextOnlyInlineLayout):

Canonical link: https://commits.webkit.org/266989@main